--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-1.
+# 🥇 ASK2026 : 딥러닝 기반 반도체 공정 최적화 모델
+
+주제 : 딥러닝 기반 반도체 공정 최적화 모델
+
+- 저자 : 이성재, 용규순, 최현준, 류병석, 김영균
+
+  
+## 1️⃣ 데이터셋
+- SMT2020 Dataset
+
+
